test/Serialization/load.code
// RUN: %empty-directory(%t)
// RUN: %target-language-frontend %s -typecheck -verify -show-diagnostics-after-fatal
// RUN: %target-language-frontend -emit-module -o %t %S/Inputs/def_func.code -module-name new_module
// RUN: %target-language-frontend %s -typecheck -I %t

// These errors should happen before we've built the module to import.
import new_module // expected-error{{no such module 'new_module'}}

new_module.getZero() // expected-error {{cannot find 'new_module' in scope}}
